fixing text spacing, word spacing, and adding context in modal

--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ nav ul li a:hover::after{
     text-align: center;
     margin-bottom: 2.4rem;
     line-height: 1.5rem;
+    letter-spacing: 1.5px;
+    word-spacing: 1.5px;
 
 }
 .tab-titles{
@@ -133,7 +135,8 @@ nav ul li a:hover::after{
     list-style: none;
     margin: 10px 0;
     line-height: 1.5rem;
-    word-spacing: 2px;
+    word-spacing: 1.5px;
+    letter-spacing: 1.5px;
     text-align: justify;
 }
 .tab-contents ul li span{
@@ -404,4 +407,56 @@ nav .fa-solid{
     bottom: 67px;
     right: 5px;
     display: none;
+}
+#modalBtn, .btnServices{
+    background: #ff004f;
+    padding: 1em 2em;
+    color: #fff;
+    border: 0;
+    cursor: pointer;
+}
+#modalBtn:hover, .btnServices:hover{
+    background:#333;
+}
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0 0 0 / .3);
+}
+.modal-content{
+    border-radius: 10px;
+    background-color: #f4f4f4;
+    margin: 20% auto;
+    padding: 20px;
+    width: 20rem;
+    color: black;
+    box-shadow: 0 5px 8px 0 rgba(77, 17, 25, 0.3), 0 7px 20px 0 rgba(0 0 0 / .3);
+    line-height: 1.5rem;
+    text-align: justify;
+}
+.closeBtn{
+    color: #ff004f;
+    float: right;
+    font-size: 30px;
+}
+.closeBtn:hover, .closeBtn:focus{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-content i{
+    font-size: 40px;
+}
+.magicLetter{
+    font-size: 23px !important;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+    border-radius: 20%;;
+
+
 }
